<resources>
    <string name="app_name">SKPUST</string>
    <string name="app_fullname">Sawarastra Kadwapatidar Umiya Social Trust</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile_number">Mobile number</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="login_successfully">Login successfully</string>
    <string name="hold_on_setting_up_your_account">Hold on setting up your account</string>
    <string name="setuppage">SetUpPage</string>
    <string name="splashscreen">Splash Screen</string>
    <string name="contactus">Contact Us</string>
    <string name="welcome">Welcome</string>
    <string name="matrimony">Matrimony</string>
    <string name="matrimony_user_detail">Matrimony User Detail</string>
    <string name="matrimony_user_detail_bottomsheet">Matrimony User Detail Bottom Sheet</string>
    <string name="home">Home</string>
    <string name="feed">Feed</string>
    <string name="matches">Matches</string>
    <string name="feed_detail">Feed Detail</string>
    <string name="people">People</string>
    <string name="people_detail">People Detail</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="menu">Menu</string>
    <string name="_91_7405777863">+91 7405777863</string>
    <string name="shubhamdev_emailid">shubhamdev@gmail.com</string>
    <string name="shubham_developers">Shubham Developers</string>
    <string name="sos">Emergency\nSOS</string>
    <string name="builder">Builder</string>
    <string name="vapi_gujarat">Vapi, Gujarat</string>
    <string name="popular_business">Popular Business</string>
    <string name="business_detail">Shubham Developers is Gujarat’s one of the greatest emerging real estate developers with signature projects especially in the cities of Ahmedabad, Vapi \u0026 Umbergaon. Commenced in 1991 by the hands of a highly skilled technical planner with a vision to create themed landscaping, Shubham Developers has transformed itself from a small company started into a whole concept company that engineers ideas into reality.</string>
    <string name="business_address">608/A, Pinnacle Business Park, Corporate Road, Near Prahladnagar Garden Ahmedabad - 380015.</string>
    <string name="businessowner">Akash Patel</string>
    <string name="foundeddata">Since 1996</string>
    <string name="address">Address</string>
    <string name="owner">Owner</string>
    <string name="logout">Logout</string>
    <string name="share_business">Share Business</string>
    <string name="search_business">Search Business</string>
    <string name="search_people">Search People</string>
    <string name="search_feed">Search Feed</string>
    <string name="search_matrimony">Search Person</string>
    <string name="dash"> - </string>
    <string name="gallery">Gallery</string>
    <string name="since">Since</string>
    <string name="detail">Detail</string>
    <string name="family">Family</string>
    <string name="ganesh_chaturthi_detail">Ganesh Chaturthi is celebrated for a whole 11 days. It begins on the Chaturthi when people install the statue of Lord Ganesha in their homes and temples. This festival ends on Anant Chaturdashi with Ganesh Visarjan. The devotees of the Lord Ganesha offer their prayers to God. They sing devotional songs for him and recited various mantras in his praise. They perform aartis in favour of the lord and seek his blessings on them.</string>
    <string name="janmashtami_detail">Since Lord Krishna was born at night, people celebrate Janmashtami at midnight. People follow a special means of celebrating Janmashtami. Since Lord Krishna loved to eat Makhan, people played sports with Makhan. They put the makhan in an earthen pot called a matki. The judge ties the makhan-filled matki very high above the ground. People play this game in groups. These people make a pyramid so tall that they can reach the matki tied above. Other teams try to stop them from reaching the matki. Every team has a definite time to reach matki. If any team fails to reach the matki before the time, then other teams are given a chance to reach the matki. This game is so interesting that many people come to see the sport.</string>
    <string name="uttrayan_detail">The meaning of the word Makar Sankranti came from two words Makar and Sankranti. The meaning of Makar is Capricorn, and the meaning of Sankranti is the transition, which makes Makar Sankranti as the transition of the sun in the Capricorn (zodiac sign). It is a very auspicious and sacred occasion, according to Hinduism.The shift of sun into Capricorn keeps divine importance, and according to us Indians, we believe taking a dip in the holy river Ganga washes away all our sins and make our soul pure and blessed. This day signifies the increase of spiritual light and reduces the materialized darkness. According to science, Makar Sankranti has longer days and shorter nights.</string>
    <string name="holi_detail">Holi is a festival to enjoy with your friends and family. People forget their troubles and revel in this festival to celebrate brotherhood. In several words, we tend to forget our enmities and realize them within the festival spirit. Holi’s essay in English is the name color as a result of people’s plays with colors. They apply them to each other’s faces to urge colored among the essence of the festival. The Hindu religion believes there was a devil king named Hiranya Kashyap method back. He had a son named Prahlad and a sister called Holika. It’s thought that the devil king had blessings of Lord Brahma. This blessing meant no man, animal, or weapon might kill him.</string>
    <string name="diwali_detail">Diwali is the main festival of Hindu. Diwali is also called “Deepawali.” It is the famous festival of Diyas and fire cracks. Diwali is celebrated in November every year.Diwali Festival is celebrated in beginning of winter days with joy.  People buy sweets and distribute them to their family, friends, and loved ones. People clean up their houses and decorate with lights and flowers. People exchange gifts with their friends. People use to wear a new dress and children enjoy crackers etc.</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="about">About</string>
    <string name="noInternetConnection">No internet connection found!</string>
    <string name="todo">todo</string>
    <string name="openDialer"><![CDATA[+91 <u> %1$s </u> ]]></string>
    <string name="religion">Religion:</string>
    <string name="cast">Cast:</string>
    <string name="mother_tongue">Mother Tongue:</string>
    <string name="marital_status">Marital Status:</string>
    <string name="birth_place">Birth Place:</string>
    <string name="blood_group">Blood Group:</string>
    <string name="qualification">Qualification:</string>
    <string name="personal_details">Personal Details</string>
    <string name="basic_details">Basic Details</string>
    <string name="hindu">Hindu</string>
</resources>