<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/matrimonyFragment"
        android:icon="@drawable/ic_matrimony"
        android:title="@string/matrimony" />

    <item
        android:id="@+id/feedFragment"
        android:icon="@drawable/ic_feed"
        android:title="@string/feed" />

    <item
        android:id="@+id/peopleFragment"
        android:icon="@drawable/ic_people"
        android:title="@string/people" />

<!--    <item-->
<!--        android:id="@+id/menuFragment"-->
<!--        android:icon="@drawable/ic_menu"-->
<!--        android:title="@string/menu" />-->
</menu>