<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_nav_graph"
    app:startDestination="@id/splashScreenFrag">
    <fragment
        android:id="@+id/splashScreenFrag"
        android:name="com.rahilkarim.skpust.ui.SplashScreenFrag"
        android:label="@string/splashscreen"
        tools:layout="@layout/fragment_splash_screen">
        <action
            android:id="@+id/action_splashScreenFrag_to_loginFrag"
            app:destination="@id/loginFrag"
            app:popUpTo="@id/splashScreenFrag"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashScreenFrag_to_homeFrag"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/splashScreenFrag"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/loginFrag"
        android:name="com.rahilkarim.skpust.ui.LoginFrag.LoginFrag"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFrag_to_setUpPageFrag"
            app:destination="@id/setUpPageFrag"
            app:popUpTo="@id/loginFrag"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/setUpPageFrag"
        android:name="com.rahilkarim.skpust.ui.SetUpPageFrag.SetUpPageFrag"
        android:label="@string/setuppage"
        tools:layout="@layout/fragment_set_up_page">
        <action
            android:id="@+id/action_setUpPageFrag_to_homeFrag"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/setUpPageFrag"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.rahilkarim.skpust.ui.HomeFrag.HomeFrag"
        android:label="@string/home">
        <action
            android:id="@+id/action_homeFragment_to_businessDetailFrag"
            app:destination="@id/businessDetailFrag" />
        <action
            android:id="@+id/action_homeFragment_to_searchBusinessFrag"
            app:destination="@id/searchBusinessFrag" />
        <action
            android:id="@+id/action_homeFragment_to_feedFragment"
            app:destination="@id/feedFragment" />
        <action
            android:id="@+id/action_homeFragment_to_peopleFragment"
            app:destination="@id/peopleFragment" />
        <action
            android:id="@+id/action_homeFragment_to_profileFrag"
            app:destination="@id/profileFrag" />
        <action
            android:id="@+id/action_homeFragment_to_historyFrag"
            app:destination="@id/historyFrag" />
        <action
            android:id="@+id/action_homeFragment_to_contactUsFragment"
            app:destination="@id/contactUsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_matrimonyFrag"
            app:destination="@id/matrimonyFragment" />
        <action
            android:id="@+id/action_homeFragment_to_sendFeedbackFrag"
            app:destination="@id/sendFeedbackFrag" />
        <action
            android:id="@+id/action_homeFragment_to_peopleSearchFrag"
            app:destination="@id/peopleSearchFrag" />
    </fragment>
    <fragment
        android:id="@+id/feedFragment"
        android:name="com.rahilkarim.skpust.ui.FeedFrag.FeedFrag"
        android:label="@string/feed"
        tools:layout="@layout/fragment_feed" >
        <action
            android:id="@+id/action_feedFragment_to_feedDetailFrag"
            app:destination="@id/feedDetailFrag" />
    </fragment>
    <fragment
        android:id="@+id/peopleFragment"
        android:name="com.rahilkarim.skpust.ui.PeopleFrag.PeopleFrag"
        android:label="@string/people"
        tools:layout="@layout/fragment_people" >
        <action
            android:id="@+id/action_peopleFragment_to_peopleDetailFrag"
            app:destination="@id/peopleDetailFrag" />
        <action
            android:id="@+id/action_peopleFragment_to_peopleSearchFrag"
            app:destination="@id/peopleSearchFrag" />
    </fragment>
    <fragment
        android:id="@+id/menuFragment"
        android:name="com.rahilkarim.skpust.ui.MenuFrag"
        android:label="@string/menu"
        tools:layout="@layout/fragment_menu" />
    <fragment
        android:id="@+id/businessDetailFrag"
        android:name="com.rahilkarim.skpust.ui.BusinessDetailFrag.BusinessDetailFrag"
        android:label="@string/business_detail"
        tools:layout="@layout/fragment_business_detail">
        <action
            android:id="@+id/action_businessDetailFrag_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_businessDetailFrag_to_searchBusinessFrag"
            app:destination="@id/searchBusinessFrag" />
        <argument
            android:name="businessDetailModelArgu"
            app:argType="com.rahilkarim.skpust.ui.BusinessDetailFrag.BusinessDetailModel" />
    </fragment>
    <fragment
        android:id="@+id/searchBusinessFrag"
        android:name="com.rahilkarim.skpust.ui.SearchBusinessFrag.SearchBusinessFrag"
        android:label="@string/search_business"
        tools:layout="@layout/fragment_search_business">
        <action
            android:id="@+id/action_searchBusinessFrag_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_searchBusinessFrag_to_businessDetailFrag"
            app:destination="@id/businessDetailFrag" />
    </fragment>
    <fragment
        android:id="@+id/peopleDetailFrag"
        android:name="com.rahilkarim.skpust.ui.PeopleDetailFrag.PeopleDetailFrag"
        android:label="@string/people_detail"
        tools:layout="@layout/fragment_people_detail" >
        <argument
            android:name="userid"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
    <fragment
        android:id="@+id/feedDetailFrag"
        android:name="com.rahilkarim.skpust.ui.FeedDetailFrag.FeedDetailFrag"
        android:label="@string/feed_detail"
        tools:layout="@layout/fragment_feed_detail" >
        <argument
            android:name="feedId"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
    <fragment
        android:id="@+id/profileFrag"
        android:name="com.rahilkarim.skpust.ui.ProfileFrag.ProfileFrag"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/historyFrag"
        android:name="com.rahilkarim.skpust.ui.HistoryFrag"
        android:label="@string/history"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_historyFrag_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/contactUsFragment"
        android:name="com.rahilkarim.skpust.ui.ContactUsFragment"
        android:label="@string/contactus">
        <action
            android:id="@+id/action_contactUsFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/matrimonyFragment"
        android:name="com.rahilkarim.skpust.ui.MatrimonyFrag.MatrimonyFrag"
        android:label="@string/matrimony">
        <action
            android:id="@+id/action_matrimonyFrag_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_matrimonyFragment_to_matrimonyUserDetailFrag"
            app:destination="@id/matrimonyUserDetailFrag" />
    </fragment>
    <fragment
        android:id="@+id/matrimonyUserDetailFrag"
        android:name="com.rahilkarim.skpust.ui.MatrimonyUserDetailFrag.MatrimonyUserDetailFrag"
        android:label="@string/matrimony_user_detail"
        tools:layout="@layout/fragment_matrimony_user_detail">
        <action
            android:id="@+id/action_matrimonyUserDetailFrag_to_matrimonyFragment"
            app:destination="@id/matrimonyFragment" />
        <argument
            android:name="matrimonyUserIdArgs"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
    <fragment
        android:id="@+id/sendFeedbackFrag"
        android:name="com.rahilkarim.skpust.ui.SendFeedbackFrag"
        android:label="@string/send_feedback"
        tools:layout="@layout/fragment_send_feedback">
        <action
            android:id="@+id/action_sendFeedbackFrag_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/peopleSearchFrag"
        android:name="com.rahilkarim.skpust.ui.PeopleSearchFrag.PeopleSearchFrag"
        android:label="@string/search_people" />
</navigation>